<resources>
    <!--Strings related to titles-->
    <string name="app_name">SanTour</string>
    <string name="title_activity_login">Sign in</string>
    <string name="title_edit_details">Edit details</string>
    <string name="title_edit_list_pod">Edit list PODs</string>
    <string name="title_edit_list_poi">Edit list POIs</string>
    <string name="title_edit_pod">Edit POD</string>
    <string name="title_edit_poi">Edit POI</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email  completions.     "</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>

    <!-- Strings related to track activity-->
    <string name="track">Track</string>
    <string name="poi">POI</string>
    <string name="pod">POD</string>
    <string name="my_track">My track</string>
    <string name="pois_list">POIs list</string>
    <string name="pods_list">PODs list</string>
    <string name="createTrack">Create a track</string>
    <string name="listTrack">List of tracks</string>
    <string name="listPOI">List of POI</string>
    <string name="listPOD">List of POD</string>
    <string name="about">About</string>
    <string name="trackName">Track\'s name</string>
    <string name="save">Save</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="searchPOI">Search POI</string>
    <string name="details">Details</string>
    <string name="check">Check</string>
    <string name="settings">Settings</string>
    <string name="language">Language</string>
    <string name="cloud">Cloud</string>
    <!-- Strings related to add poi/pod-->
    <string name="latitude">Lat : 80.028</string>
    <string name="longitude">Lng : 34.394</string>
    <string name="pod_name">POD name: </string>
    <string name="poi_name">POI name: </string>
    <string name="poi_pod_description">Description</string>
    <string name="title_activity_track2" translatable="false">Track2Activity</string>
    <string name="tab_text_1" translatable="false">Tab 1</string>
    <string name="tab_text_2" translatable="false">Tab 2</string>
    <string name="tab_text_3" translatable="false">Tab 3</string>
    <string name="action_settings">Settings</string>
    <string name="section_format" translatable="false">Hello World from section: %1$d</string>
    <string name="searchPOD">Search POD</string>
    <string name="track_difficulty">Difficulty</string>
    <string name="track_accessforeveryone" translatable="false">Access for everyone</string>
    <string name="track_pauseduration" translatable="false">Pause duration</string>
    <string name="searchTrack">Search Track</string>
    <string name="pod_category">Category</string>
    <string name="pod_description">Description</string>
    <string name="pod_rating">Rating</string>
    <!-- Strings related to edition-->
    <string name="edition_distance">Distance</string>
    <string name="edition_time">Duration</string>
    <string name="edition_tab_text_1">Details</string>
    <string name="edition_tab_text_2">POIs list</string>
    <string name="edition_tab_text_3">PODs list</string>
    <string name="edition_details_track">Details</string>
    <string name="edition_details_list_poi">POIs list</string>
    <string name="edition_details_list_pod">PODs list</string>

    <string name="edition_details_poi">Details POI</string>
    <string name="edition_categories_poi">Categories POI</string>
    <string name="edition_details_pod">Details POD</string>
    <string name="edition_categories_pod">Categories POD</string>
    <!-- Strings related to main navigation-->
    <string name="main_navigation_item1">Create a track</string>
    <string name="main_navigation_item2">List of tracks</string>
    <string name="main_navigation_item3">Settings</string>
    <string name="main_navigation_item4">About</string>


    <string name="title_activity_main_full_screen_image" translatable="false">MainFullScreenImage</string>
    <string name="dummy_button" translatable="false">Dummy Button</string>
    <string name="dummy_content" translatable="false">DUMMY\nCONTENT</string>

    <string name="title_activity_main_full_screen_picture" translatable="false">MainFullScreenPictureActivity</string>
    <string name="minutes">minutes</string>
    <string name="title_activity_track_edit_poi" translatable="false">TrackEditPOIActivity</string>
    <string name="resetPass">Reset your password</string>
    <string name="sychronise">Synchronise</string>
    <string name="back">back</string>
    <string name="minimal_distance_server">Minimal Distance (server)</string>
    <string name="seekbar_steps_server">Seekbar steps (server)</string>
    <string name="download_settings">Download settings</string>
    <string name="logout">Logout</string>
    <string name="name">name</string>
    <string name="next">Next</string>
    <string name="lat_">Lat:</string>
    <string name="lng_">Lng:</string>
    <string name="name_">Name:</string>
    <string name="desc_">Description:</string>
    <string name="selected_">Selected categories:</string>
    <string name="detail_poi_">Details of the POI:</string>
    <string name="yes">Yes</string>
    <string name="show_pic">Show picture</string>
    <string name="danger_rating_">Danger rating:</string>
    <string name="detail_pod">Details of the POD:</string>
    <string name="delete">Delete</string>
    <string name="infoSynch">Force sync</string>
    <string name="error_no_name_track">You have to enter a name to your track</string>
    <string name="settings_updated">Settings updated</string>
    <string name="_0_0m" translatable="false">0.0m</string>
    <string name="_0" translatable="false">0</string>
    <string name="firebase_download">All downloaded from Firebase</string>

    <string name="about_text">As part of the 645-2 Software Development Project module, we have been asked to create an application that collects GPS points from a track and offers the possibility to add "Points of Interests" (POI) and "Points of Difficulty" (POD) that will be linked to an image. The application will have to be managed from an admin interface and use firebase as cloud.</string>
    <string name="copyright" translatable="false">Copyright© SanTour 2017</string>

</resources>
