<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/main_navigation_item1"
        android:enabled="true"
        android:icon="@drawable/ic_place_black_24dp"
        android:title="@string/main_navigation_item1"
        app:showAsAction="always|withText"/>
    <item
        android:id="@+id/main_navigation_item2"
        android:enabled="true"
        android:icon="@drawable/ic_map_black_24dp"
        android:title="@string/main_navigation_item2"
        app:showAsAction="always|withText"/>
    <item
        android:id="@+id/main_navigation_item3"
        android:enabled="true"
        android:icon="@drawable/ic_settings_black_24dp"
        android:title="@string/main_navigation_item3"
        app:showAsAction="always|withText"/>
    <item
        android:id="@+id/main_navigation_item4"
        android:enabled="true"
        android:icon="@drawable/ic_favorite_black_24dp"
        android:title="@string/main_navigation_item4"
        app:showAsAction="always|withText"/>
    <item
        android:id="@+id/main_navigation_item5"
        android:enabled="true"
        android:icon="@drawable/ic_settings_power_black_24dp"
        android:title="@string/logout"
        app:showAsAction="always|withText"/>
</menu>