<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_green"
    tools:context="ch.hesso.santour.view.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="260dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button4"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="192dp"
                android:layout_height="match_parent"
                android:text="@string/createTrack" />

            <Button
                android:id="@+id/button5"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="192dp"
                android:layout_height="match_parent"
                android:text="@string/listTrack" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="260dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button8"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="192dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/listPOI" />

            <Button
                android:id="@+id/button11"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="192dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/about" />
        </LinearLayout>
    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>
