<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/edition_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ch.hesso.santour.view.Edition.Activity.TrackEditActivity">

    <android.support.design.widget.TabLayout
        android:id="@+id/edition_tabs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TabItem
            android:id="@+id/edition_tab_item"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edition_tab_text_1" />

        <android.support.design.widget.TabItem
            android:id="@+id/edition_tab_item2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edition_tab_text_2" />

        <android.support.design.widget.TabItem
            android:id="@+id/edition_tab_item3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edition_tab_text_3" />

    </android.support.design.widget.TabLayout>

    <android.support.v4.view.ViewPager
        android:id="@+id/track_edit_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/edition_tabs"
        app:layout_behavior="@string/appbar_scrolling_view_behavior" />
</RelativeLayout>
