<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorPrimary"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="ch.hesso.santour.view.Login.LoginActivity">

    <!-- Login progress -->


    <LinearLayout
        android:id="@+id/linear_layout_login_logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:weightSum="1">

        <ImageView
            android:id="@+id/login_logo"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_weight="1"
            android:src="@drawable/ic_logo" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/linear_layout_login_logo"
        android:orientation="vertical"
        android:padding="20dp"
        android:weightSum="2">

        <EditText
            android:id="@+id/login_textView_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"
            android:background="@color/colorWhite"
            android:hint="@string/username"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:padding="15dp"
            android:singleLine="true">


        </EditText>

        <EditText
            android:id="@+id/login_textView_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="25dp"
            android:layout_weight="1"
            android:background="@color/colorWhite"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:maxLines="1"
            android:padding="15dp"
            android:singleLine="true">

        </EditText>

        <Button
            android:id="@+id/login_button_login"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"
            android:text="@string/login"
            android:textColor="@color/colorWhite"
            android:textStyle="bold" />
            android:textStyle="bold" />

        <TextView
            android:id="@+id/login_textView_resetPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_weight="2"
            android:textAlignment="center"
            android:textSize="15sp"
            android:text="@string/resetPass" />
    </LinearLayout>


</RelativeLayout>
