<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:clickable="true"
    tools:context="ch.hesso.santour.view.Tracking.Fragment.FragmentEndTrack">

    <EditText
        android:id="@+id/edit_track_textView_nameTrack"
        style="@style/Widget.AppCompat.EditText"
        android:layout_width="match_parent"
        android:layout_height="71dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/trackName"
        android:inputType="text"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/edit_track_map_mapView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.66" />


    <com.google.android.gms.maps.MapView
        android:id="@+id/edit_track_map_mapView2"
        android:layout_width="match_parent"
        android:layout_height="255dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/edit_track_textView_nameTrack"
        tools:layout_editor_absoluteX="0dp"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/edit_track_textView_difficulty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:text="@string/track_difficulty"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_track_map_mapView2" />

    <TextView
        android:id="@+id/edit_track_textView_accessforeveryone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:text="@string/track_accessforeveryone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_track_textView_difficulty" />

    <TextView
        android:id="@+id/edit_track_textView_pauseduration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:text="@string/track_pauseduration"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_track_textView_accessforeveryone" />

    <SeekBar
        android:id="@+id/edit_track_seekBar_difficulty"
        android:layout_width="161dp"
        android:layout_height="23dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.736"
        app:layout_constraintStart_toEndOf="@+id/edit_track_textView_difficulty"
        app:layout_constraintTop_toBottomOf="@+id/edit_track_map_mapView2" />

    <CheckBox
        android:id="@+id/edit_track_checkBox_accessForEveryone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/edit_track_textView_accessforeveryone"
        app:layout_constraintTop_toBottomOf="@+id/edit_track_seekBar_difficulty" />

    <EditText
        android:id="@+id/edit_track_editText_pauseDuration"
        android:layout_width="80dp"
        android:layout_height="32dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="number"
        android:text="@string/minutes"
        android:textSize="12sp"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.582"
        app:layout_constraintStart_toEndOf="@+id/edit_track_textView_pauseduration"
        app:layout_constraintTop_toBottomOf="@+id/edit_track_checkBox_accessForEveryone"
        app:layout_constraintVertical_bias="0.043" />


</android.support.constraint.ConstraintLayout>
